<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/basic_info_edit_image_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_picture_jumbo_height"
        android:background="?attr/selectableItemBackground">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/user_picture_chooser_background"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editProfilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/defaultimage"
            app:civ_border_color="@color/black"
            app:civ_border_width="5dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:src="@drawable/ic_photo_camera_white_24dp"
            android:contentDescription="@null"/>

    </FrameLayout>


    <EditText
        android:id="@+id/basic_info_edit_name"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:hint="@string/basic_info_edit_name_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/basic_info_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:hint="@string/basic_info_edit_phone_hint"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/basic_info_edit_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:hint="@string/basic_info_edit_language_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/basic_info_edit_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:hint="@string/basic_info_edit_street_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/basic_info_edit_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:hint="@string/basic_info_edit_zipcode_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/saveBasicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="90dp"
        android:layout_below="@+id/basic_info_edit_language"
        android:layout_marginTop="24dp"
        android:text="Save"/>

</LinearLayout>